Skills have been updated in index.html
I updated the skills flip panel's information in index.html

--- a/index.html
+++ b/index.html
@@ -140,11 +140,21 @@
                     <p><b><u>Hover</u></b><p>
                   </div>
                   <div class="flip-card-back">
-                    <p><b>Lorem Ipsum</b></p>
-                    <p><b>This is Lorem Text</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Debitis, repellendus modi quasi omnis nulla eligendi voluptate atque tenetur voluptatibus,
-                         quisquam a doloremque cum odio suscipit ipsa. Doloribus rem modi iste.</p>
+                   <ul>
+                      <li><b>Excel</b></li>
+                      <br></br>
+                      <li><b>SalesForce</b></li>
+                      <br></br>
+                      <li><b>ServiceNow</b></li>
+                      <br></br>
+                      <li><b>JavaScript</b></li>
+                      <br></br>
+                      <li><b>Version Control</b></li>
+                      <br></br>
+                      <li><b>HTML</b></li>
+                      <br></br>
+                      <li><b>CSS</b></li>
+                    </ul>
                   </div>
                 </div>
               </div>
