Skills flip panel has been edited in  index.html

--- a/index.html
+++ b/index.html
@@ -140,21 +140,16 @@
                     <p><b><u>Hover</u></b><p>
                   </div>
                   <div class="flip-card-back">
-                   <ul>
-                      <li><b>Excel</b></li>
-                      <br></br>
-                      <li><b>SalesForce</b></li>
-                      <br></br>
-                      <li><b>ServiceNow</b></li>
-                      <br></br>
-                      <li><b>JavaScript</b></li>
-                      <br></br>
-                      <li><b>Version Control</b></li>
-                      <br></br>
-                      <li><b>HTML</b></li>
-                      <br></br>
-                      <li><b>CSS</b></li>
-                    </ul>
+                    <p><b>Excel </b> - Creating spreadsheets, researching material, and sharing workbooks on OneDrive</p>
+                      <p><b>SalesForce</b> - Creating CCCs, closing CCCs, searching and filtering CCCs.</p>
+                      <p><b>ServiceNow</b> - Ticket creation and ticket closing.</p>
+                      <p><b>JavaScript</b> - Learned JavaScript at LaunchCode LC101 course.</p>
+                      <p><b>Version Control</b> - I know how to use Git and GitHub I have some projects on my GitHub that are linked here https://github.com/Ballarja</p>
+                      <p><b>HTML</b> - I have created a couple projects that include just a couple websites.</p>
+                      <p><b>CSS</b> - I learned CSS from watching some Udemy tutorials and implemented some CSS into some of the websites I created. </p>
+                      <p><b>Java</b> - I am a self-taught java programmer through multiple resources consisting of Udemy tutorials, Codecademy , some CodeGym exercises.</p>
+                      <p><b>C#</b> - I am a self-taught in C# by multiple online tutorials from Udemy and Codecademy. Ive mainly worked in Unity Game Engine when developing projects with C#.</p>
+                      <p><b>Oracle</b> - locating missing material, capturing attributes. And problem solving.</p>
                   </div>
                 </div>
               </div>
