--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
         h2  {text-align: center;}
         
     </style>
-    <link rel ="stylesheet" href = "style.css">
+    <link rel ="stylesheet" href = "styles.css">
 </head>
 <body>
     <header id = "mainHeading"> 
