--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Ballard Resume Site</title>
+     <link href="styles.css" rel="stylesheet">
     <link rel="icon from favicon.io" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <style>
         h1 {text-align: center;}
@@ -12,7 +13,6 @@
         h2  {text-align: center;}
         
     </style>
-    <link rel ="stylesheet" href = 'styles.css'>
 </head>
 <body>
     <header id = "mainHeading"> 
